--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App {
+  margin: 0em;
+  background-color: #141212 ;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  color: #141212;
+  font-size: 14px;
+  font-family: 'Poppins', sans-serif;
+  line-height: 1.80857;
+  font-weight: normal; 
+}
+
+
+header img {
+  padding-left: 1300px;
+  width: 200px;
+  height: 80px;
+}
+
+header {
+  display: flex;
+  height: 70px;
+  background-color: aqua;
+}
+
+header h1{
+  font-weight: bolder;
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
 }
