--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,16 @@ header h1{
   font-weight: bold;
   
 }
+
+.frame-product{
+  margin: 1rem;
+  display: inline-block;
+  padding:5mm;
+  line-height: 0ch;
+  border-style:groove;
+}
+
+
+.frame-product img {
+  width: 100%;
+}
