--- a/src/index.css
+++ b/src/index.css
@@ -127,3 +127,24 @@ header h1{
   font-style: italic;
    text-align: center;
 }
+
+.onCart {
+  margin:auto;
+}
+
+table, th, td {
+  text-align: left;
+  border: 2px solid black;
+  border-top: 0em;
+  border-left: 0em;
+  border-right: 0em;
+  
+
+}
+table{
+  width: 80%;
+}
+ 
+.onCart img{
+  width: 150px;
+}
