--- a/src/index.css
+++ b/src/index.css
@@ -152,3 +152,26 @@ table{
 .cart-total{
   font-weight: bolder;
 }
+
+@media (min-width: 768px) {
+  .frameCards {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .frame-product {
+    width: calc(33% - 2rem);
+  }
+}
+
+@media (min-width: 1024px) {
+  .frame-product {
+    width: calc(25% - 2rem);
+  }
+}
+
+@media (min-width: 1200px) {
+  .frame-product {
+    width: calc(20% - 2rem);
+  }
+}
